--- a/POSProject/Register.xaml
+++ b/POSProject/Register.xaml
@@ -8,7 +8,7 @@
         Title="Zarejestruj się"
         Height="720" Width="900"
         WindowStyle="SingleBorderWindow"
-        ResizeMode="CanResizeWithGrip"
+        ResizeMode="NoResize"
         Background="#444"
         FontFamily="Fonts/#Rubik">
     <Grid>
